--- a/src/App.css
+++ b/src/App.css
@@ -55,6 +55,10 @@ h4 {
     margin-top: 30px;
 }
 
+.mt-5 {
+    margin-top: 5px;
+}
+
 .mt-mb-10 {
     margin-top: 10px;
     margin-bottom: 10px;
